Fix logout icon and text alignment
Fix logout icon alignment with text

--- a/app/styles/partials/nav-bar.scss
+++ b/app/styles/partials/nav-bar.scss
@@ -23,6 +23,10 @@
   left: auto !important;
   right: 0 !important;
 
+  .signout {
+    padding-left: 70%;
+  }
+
   a.item {
     min-width: 200px;
   }
